# AnyData

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
anydata/: columns.py  file.py
docs/: .gitignore  conf.py  index.md
docs/bad_practices/: index.md
docs/best_practices/: chunk.md  index.md  modin.md
docs/examples/: index.md
tests/: test_columns.py
tests/data/original/: wide.txt
